--- a/style.css
+++ b/style.css
@@ -1,12 +1,15 @@
-// <uniquifier>: Use a unique and descriptive class name
-// <weight>: Use a value from 100 to 400
+<style>
+@import url('https://fonts.googleapis.com/css2?family=Anton&display=swap');
+</style>
 
-.playwrite-ng-modern-<uniquifier> {
-  font-family: "Playwrite NG Modern", cursive;
-  font-optical-sizing: auto;
-  font-weight: <weight>;
+
+.anton-regular {
+  font-family: "Anton", sans-serif;
+  font-weight: 400;
   font-style: normal;
+}
 
-.p{
-    font-family: playwrite-ng-modern;
+p{
+  font-family: "Anton", sans-serif;
+  font-weight: 400;
 }
