--- a/style.css
+++ b/style.css
@@ -1,15 +1,17 @@
-<style>
-@import url('https://fonts.googleapis.com/css2?family=Anton&display=swap');
-</style>
+
+@import url('https://fonts.googleapis.com/css2?family=Playwrite+NG+Modern:wght@100..400&display=swap');
 
 
-.anton-regular {
-  font-family: "Anton", sans-serif;
-  font-weight: 400;
+.playwrite-ng-modern- {
+  font-family: "Playwrite NG Modern", cursive;
+  font-optical-sizing: auto;
+  font-weight: 100;
   font-style: normal;
 }
 
 p{
-  font-family: "Anton", sans-serif;
-  font-weight: 400;
+  font-family: "Playwrite NG Modern", cursive;
+  font-optical-sizing: auto;
+  font-weight: 100;
+  font-style: normal;
 }
